# rust-cargo-pkg-info-struct-builder

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust-tests.yml
cargo-pkg-info-struct-builder/: Cargo.toml
cargo-pkg-info-struct-builder/src/: inject.rs  inject_build_metadata.rs  inject_build_metadata.struct.rs  lib.rs
cargo-pkg-info-struct-builder/tests/: inject_metadata.rs  test_inject_metadata.rs
cargo-pkg-info-test-app/: Cargo.toml  MOCK-LICENSE.txt  build.rs
cargo-pkg-info-test-app/src/: cargo_pkg_info.rs  lib.rs  main.rs
cargo-pkg-info-test-app/tests/: test_pkg_info.rs
example-app/: Cargo.toml  build.rs
example-app/src/: cargo_pkg_info.rs  main.rs
src/: lib.rs
