[package]
name = "cargo-pkg-info-struct-builder"
version = "0.1.0-alpha1"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A Rust crate used as a build dependency which provides structured access to Cargo Package Info."
repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
license = "MIT"

[dependencies]

[dev-dependencies]
tempfile = "3.16.0"
