[package]
name = "cargo-pkg-info-struct-builder"
version = "0.1.0-alpha8"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A Rust crate used as a build dependency which provides structured access to Cargo Package Info."
repository = "https://github.com/jzombie/rust-cargo-pkg-info-struct-builder"
license = "MIT"

[dependencies]
string-auto-indent = "0.1.0-alpha"
toml = "0.8.20"

[dev-dependencies]
syn = { version = "2.0.98", features = ["full"] }
tempfile = "3.16.0"
